# neuromorphic-nn-snn-research-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/design/: 2026-05-16-mnist-snn-optimization.md  2026-05-16-viz-toolkit-implementation.md  2026-05-23-sequential-mnist.md  2026-05-25-stdp-wta-demo.md  stage-1-visualization-toolkit.md
docs/handoffs/: week7_11_handoff
experiments/001_smoke_test/: config.yaml  run.py
experiments/002_week1_mnist_classifier/: data_loader.py  eval.py  goal.md  model.py  training.py
experiments/003_week2_lif_neuron_viz/: beta_sweep.py  goals.md  network.py  network_visualized.py  single_neuron.py
experiments/004_week3_1_pytorch_handson/: autograd_Ex.py  basic_tensor.py  exercise_2.py  exercise_3.py  tinyMLP.py
experiments/005_week3_2_pytorch_training_loops/: data_loader.py  models.py  run_experiments.py  train.py
experiments/006_week4_1_gymnasium_intro/: 01_live_render_cartpole.py  02_save_episode_gif.py  03_return_distribution.py  04_state_trajectory.py  gym_tutorial.py
experiments/007_week4_2_qlearning_grid_agent/: q_learn_gridworld.py
experiments/008_week5_snn_mnist_baseline/: config.yaml  plots.py  run.py  run2.py  viz_smoke.py
experiments/009_week6_snn_mnist_optimization/: models.py  run.py  run_all.py  v1_mlp_tuned.yaml  v2_cnn_baseline.yaml  v3_cnn_tuned.yaml  verify_best.py
experiments/010_week7_recurrent_sn/: goals.md  run_all.py  section2_v_sweep.py  section2b_10neuron_population.py  section3_ff_vs_recurrent.py  section4_rsynaptic_check.py
tests/: test_row_encode.py
(+34 files in other folders)
