[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromorphic"
version = "0.1.0"
description = "Regionalized spiking neural network research project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mike Greene", email = "michael.greene.pro@gmail.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["src"]

# --- Test config (pytest) ---
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

# --- Lint/format config (Ruff) — light defaults ---
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "checkpoints", "runs", "wandb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
